# sme-suite

./: .env.example  AGENTS.md  Cargo.toml  Justfile  PROGRESS.md  README.md  flake.nix
.github/workflows/: ci.yml
apps/suite-server/: Cargo.toml
apps/suite-server/src/: main.rs
codex/prompts/: header.md
codex/tasks/: 01_scaffold_server.yml  02_db_rls.yml  03_authn_oidc_bff.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  schema.rs
crates/api/tests/: crm.rs  pipeline.rs  search.rs  tasks.rs
crates/api/tests/common/: mod.rs
crates/entity/: Cargo.toml
crates/entity/src/: activity.rs  app_user.rs  company.rs  contact.rs  deal.rs  deal_stage_history.rs  lib.rs  prelude.rs  stage_meta.rs  task.rs  user.rs  user_identity.rs  user_role.rs  user_secret.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20251116_000001_init.rs  m20251116_120000_crm_core.rs  m20251116_130000_crm_v2.rs  m20251116_140000_crm_search.rs  m20251116_150000_crm_pipeline.rs  m20251116_160000_auth_rbac.rs  m20251117_150000_stage_meta.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/research/: SME CRM and HR Apps_ Essential Features and Unified Architecture.docx  codex-workflow.md  gemini-crm-essential-features-research.md  plan.md
entity/: Cargo.toml
entity/src/: lib.rs  memberships.rs  orgs.rs  sessions.rs  users.rs
frontend/: README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_init.rs  m20240102_000002_sessions_and_default_org.rs
migrations/: README.md
platform/api/: Cargo.toml
platform/api/src/: lib.rs
platform/authn/: Cargo.toml
platform/authn/src/: lib.rs
platform/authz/: Cargo.toml
platform/authz/src/: lib.rs
platform/db/: Cargo.toml
platform/db/src/: lib.rs
platform/obs/: Cargo.toml
platform/obs/src/: lib.rs
products/crm/: Cargo.toml
products/crm/src/: lib.rs
products/hr/: Cargo.toml
products/hr/src/: lib.rs
scripts/: postgres.sh
server/: Cargo.toml
server/src/: config.rs  http.rs  main.rs
server/src/graphql/: me.rs  mod.rs
tests/: Cargo.toml  lib.rs  rls_isolation.rs
