[workspace]
resolver = "2"
members = [
  "apps/suite-server",
  "platform/authn",
  "platform/authz",
  "platform/db",
  "products/crm",
  "products/hr"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Fossrust Contributors"]
publish = false

[workspace.dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
platform-authn = { path = "platform/authn" }
platform-authz = { path = "platform/authz" }
platform-db = { path = "platform/db" }
products-crm = { path = "products/crm" }
products-hr = { path = "products/hr" }
sea-orm = { version = "0.12", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
