[workspace]
resolver = "2"
members = [
  "platform/api",
  "platform/db",
  "platform/obs",
  "server",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Fossrust Contributors"]
publish = false

[workspace.dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-axum = "7"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
once_cell = "1.19"
platform-api = { path = "platform/api" }
platform-db = { path = "platform/db" }
platform-obs = { path = "platform/obs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
