[workspace]
resolver = "2"
members = [
  "entity",
  "platform/api",
  "platform/db",
  "platform/obs",
  "server",
  "tests",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Fossrust Contributors"]
publish = false

[workspace.dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-axum = "7"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie-private", "cookie-signed"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
entity = { path = "entity" }
openidconnect = "3.5"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
platform-api = { path = "platform/api" }
platform-db = { path = "platform/db" }
platform-obs = { path = "platform/obs" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.12", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "0.12", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-uuid"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
