[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "Suite server binary (CLI + HTTP + GraphQL)"
publish = false

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
clap.workspace = true
platform-api.workspace = true
platform-db.workspace = true
platform-obs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
