[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "Suite server binary (CLI + HTTP + GraphQL)"
publish = false

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
entity.workspace = true
openidconnect.workspace = true
platform-authn = { path = "../platform/authn" }
platform-api.workspace = true
platform-db.workspace = true
platform-obs.workspace = true
rand.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sea-orm.workspace = true
tower = { workspace = true, features = ["util"] }
