[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid", "with-chrono"] }
migration = { path = "../migration" }
entity = { path = "../entity" }
api = { path = "../api" }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
url = "2"
http-body-util = "0.1"
