[package]
name = "platform-api"
version = "0.1.0"
edition = "2024"
description = "GraphQL helpers shared across suite surfaces"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
