[package]
name = "platform-authn"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio.workspace = true
url = "2"
