[package]
name = "platform-obs"
version = "0.1.0"
edition = "2024"
description = "Observability primitives (tracing, OTLP exporters)"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
